--- a/plantmonitor/plantmonitorUI/src/app/app.component.sass
+++ b/plantmonitor/plantmonitorUI/src/app/app.component.sass
@@ -3,7 +3,23 @@ mat-icon
 
 .example-card
   max-width: 400px
+  max-height: 60%
 
 .example-header-image
   background-image: url('https://img.crocdn.co.uk/images/products2/pl/20/00/03/44/pl2000034445_card3_lg.jpg')
   background-size: cover
+
+.main-flex-container
+  display: flex
+  justify-content: center
+  margin-top: 20px
+  margin-bottom: 20px
+.sensor-container
+  display: flex
+
+
+.sensor-item
+  padding: 10px
+  width: 15%
+  font-weight: bold
+  width: 100%
